# Facial-Emotion-Recognition

./: .gitignore  Facial_Emotion_Recognition.ipynb  README.md  main.py  pyproject.toml  requirements.txt
apps/: gradio_app.py  inference_webcam.py  streamlit_app.py
config/: config.py
docs/: ARCHITECTURAL_DETAILS.md
src/: data_loader.py  evaluate.py  model.py  trainer.py  utils.py
